# rknn_yolo_rtsp

./: CMakeLists.txt  Makefile  Makefile.back  comm.cc  drm_func.c  main.archive  main.cc  main_achive.cc  postprocess.cc  readme  rga_trans.c  rknn_funcs.cpp  rknn_model.cc  rtsp_comm.cc  sample_common_isp.c  sample_common_isp.cc  yolo.cc
include/: comm.h  drm_func.h  postprocess.h  rga_func.h  rga_trans.h  rknn_funcs.h  rknn_model.h  rtsp_comm.h  sample_common.h  yolo.h
include/camera_engine_rkaiq/algos/anr/tnr_md/: motion_detect.h
include/opencv3/opencv2/: cvconfig.h
include/rkmedia/easymedia/: codec.h  decoder.h  encoder.h  media_type.h  reflector.h
include/rkmedia/rkmedia/: rkmedia_common.h
lib/: libeasymedia.so.1
lib/common/drm/include/: xf86drm.h
lib/platform/RK1808/libpng/share/man/man3/: libpng.3
models/: swab_precomiled.rknn
